Ajustada a implementação do teste ConsultarPedidoUseCaseImpl para incluir a simulação do cliente e corrigir a verificação de pedidos retornados